style.css
* {
    padding: 0;
    margin: 0; 
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    background-color: black;
}

@font-face {
    font-family: satisfy;
    src: url(fonts/Satisfy-Regular.ttf);
}

@font-face {
    font-family: inter;
    src: url(fonts/Inter-Regular.ttf);
}

/* LEFT AREA */

.body-left {
    background-image: url("images/body-left-bg.jpg");
    background-position: center;
    background-size: 250%;
    width: 30vw;
    height: 100%;
}

.company-header {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    color: white;
    background-color: rgb(0, 0, 0, .5);
    margin-top: 35%;
    height: 120px;
}

.company-header > img {
    height: 75px;
    color: white;
}

.company-header > h1 {
    font-family: satisfy, cursive;
    font-size: 48px;
}

.body-left > small {
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 30vw;
    background-color: rgb(0, 0, 0, 0.3);
    color: rgb(189, 189, 189);
    font-family: inter, sans-serif;
}

.body-left > small > a {
    color: rgb(189, 189, 189);
    font-family: inter, sans-serif;
}



/* RIGHT AREA */
.body-right {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: rgb(252, 249, 255);
    width: 50vw;
    font-family: inter, sans-serif;
}

.sign-up-card {
    padding: 20px 40px;
    background-color: #fff;
    box-shadow: 0px 1px 3px .1px rgba(0, 0, 0, 0.5);
    margin: 10px 0;
}

p:first-child {
    font-size: 18px;
    margin-bottom: 20px;
}

.call-to-action {
    margin: 20px 40px;
}

ul {
    display: flex;
    flex-wrap: wrap;
    gap: 20%;
}

li {
    list-style: none;
    display: flex;
    flex-direction: column;
    margin: 10px 0;
    color: rgb(78, 78, 78);
    text-transform: uppercase;
    font-size: 10px;
    letter-spacing: 1px;
}

li > input {
    height: 25px;
    width: 150%;
}

button {
    margin: 20px 40px;
    width: 30%;
    height: 40px;
    border: none;
    border-radius: 8px;
    background-color: rgb(49, 49, 94);
    color: white;
}

.log-in {
    margin: 20px 40px;
    font-size: 12px;
}

